add pinger
